--- a/static/style.css
+++ b/static/style.css
@@ -16,29 +16,15 @@
 #picForm{
     color:black;
 }
-
-.upload-btn-wrapper {
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-  }
   
   .btn {
-    border: 2px solid gray;
-    color: gray;
+    border: 1px solid gray;
+    color: black;
     background-color: white;
-    padding: 8px 20px;
-    border-radius: 8px;
-    font-size: 20px;
+    padding: 8px;
+    border-radius: 5px;
+    font-size: 10px;
     font-weight: bold;
-  }
-  
-  .upload-btn-wrapper input[type=file] {
-    font-size: 100px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
   }
 
   #output{
