--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@
 #bodyy{
     font-family: 'Josefin Sans', sans-serif;
     background-color: #252830;
-    color:#fff;
+    color:#000;
 }
 
 #title-name{
@@ -23,7 +23,7 @@
     background-color: white;
     padding: 8px;
     border-radius: 5px;
-    font-size: 10px;
+    font-size: 16px;
     font-weight: bold;
   }
 
