added css for confirm image dialog

--- a/templates/Manipulator.html
+++ b/templates/Manipulator.html
@@ -16,7 +16,7 @@
   <body id="bodyy">
     <div class="container">
         <h1 id="title-name">Image Manipulator</h1>
-        <h3>Online Image - Manipulation Tool!</h3>
+        <h3 style='color: blanchedalmond;'>Online Image - Manipulation Tool!</h3>
       </div>
 
       <div class="jumbotron" style="padding:50px;margin:80px;">
