--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
+
 #bodyy{
     font-family: 'Josefin Sans', sans-serif;
     background-color: #252830;
@@ -20,7 +21,7 @@
   .btn {
     border: 1px solid gray;
     color: black;
-    background-color: white;
+    background-color: #ff5252;
     padding: 8px;
     border-radius: 5px;
     font-size: 12px;
@@ -28,6 +29,7 @@
   }
 
   #output{
+    
       max-width: 300px;
       max-height: 400px;
   }
