--- a/templates/index.html
+++ b/templates/index.html
@@ -22,11 +22,11 @@
       <div class="jumbotron" style="padding:50px;margin:80px;">
 
         <div class="row">
-          <div class="col" style="color: black;">
+          <div class="col-sm" style="color: black;">
                 This is an Online Image Filter tool! Allows for users to upload an image and select any kind of filters from the Basic and Advanced Filters Dropdowns. 
                 You can view the image with the filters applied simultaneously and can also download the image!
           </div>
-          <div class="col">
+          <div class="col-sm">
             <h2 style="font-family: 'Josefin Sans', sans-serif;">Upload an Image!</h2>
 
             <form action="/imageFilters" method="post" enctype="multipart/form-data">
