--- a/templates/output.html
+++ b/templates/output.html
@@ -49,7 +49,7 @@
         console.log("test")
         var data = 0
 			$.ajax({
-				url: "/basicfilterImage", // fix this to your liking
+				url: "/filterImage", // fix this to your liking
 				type:"POST",
 				data: data,
 				cache: false,
