added advanced filters

--- a/templates/filters.html
+++ b/templates/filters.html
@@ -52,7 +52,9 @@
                 <option>Advanced Filters</option>
                 <option value="Cartoonification" class="dropdown-item" style="background-color: #f1f1f1;" >Cartoonification</option>
                 <option value="Pencil Sketch" class="dropdown-item" style="background-color: #f1f1f1;" >Pencil Sketch</option>
-                <option value="Edge detect" class="dropdown-item" style="background-color: #f1f1f1;">Edge detect</option>
+                <option value="Coloured Pencil Sketch" class="dropdown-item" style="background-color: #f1f1f1;" >Coloured Pencil Sketch</option>
+                <option value="Oil Paint" class="dropdown-item" style="background-color: #f1f1f1;">Oil Paint</option>
+                <option value="Water Colour" class="dropdown-item" style="background-color: #f1f1f1;">Water Colour</option>
             </select><br />
             <input type="submit" id="advanceSubmit" class="btn" style="background-color: #efc968;display: none; margin-top: 8px;">
           </form>  
