--- a/templates/filters.html
+++ b/templates/filters.html
@@ -22,10 +22,10 @@
         <h3 style='color: blanchedalmond;'>Online Image - Filter Tool!</h3>
       </div>
 
-      <div class="jumbotron" style="padding:50px;margin:80px;height:400px;">
+      <div class="jumbotron" style="padding:3%;margin:5%;min-height:400px;">
         <div class="row">
           <div class="col-sm">
-             <img id="imagebox" style="max-width:300px;max-height:400px;"  src="">
+             <img id="imagebox" style="min-width:300px;min-height:400px;15px;width: 90%;height:100%;padding-bottom: 2%"  src="">
           </div>    
           <div class="col-sm">
             <div class="dropdown">
