--- a/templates/output.html
+++ b/templates/output.html
@@ -22,10 +22,10 @@
         <h3 style='color: blanchedalmond;'>Online Image - Filter Tool!</h3>
       </div>
 
-      <div class="jumbotron" style="padding:50px;margin:80px;height:400px;">
+      <div class="jumbotron" style="padding:3%;margin:5%;height:60%;width: 80%">
         <div class="row">
           <div class="col-sm">
-             <img id="imagebox" style="max-width:300px;max-height:400px;" src="">
+             <img id="imagebox" style="min-width:300px;min-height:400px;width: 80%;height:60%;" src="">
           </div>    
           <div class="col-sm">
             Back to filters?
